# furby

./: README.md  pyproject.toml
personality/: __init__.py  __main__.py  brain.py
