[project]
name = "furby"
version = "0.0.0"
description = ""
authors = [
    {name = "eden",email = "eden@allthingslinux.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
